codiusd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codiusd
  labels:
    app: codiusd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codiusd
  template:
    metadata:
      labels:
        app: codiusd
    spec:
      containers:
      - name: codiusd
        image: wilsonianbcoil/codiusd
        ports:
        - containerPort: 3000
      - name: moneyd-local
        image: wilsonianbcoil/moneyd-local
        ports:
        - containerPort: 7768
      serviceAccountName: codiusd
