codiusd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codiusd-service
spec:
  selector:
    app: codiusd
  ports:
  - protocol: TCP
    port: 3000
